--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@wayward/types",
 	"description": "TypeScript declarations for Wayward, used for modding.",
-	"version": "2.8.0",
+	"version": "2.8.0-beta.dev.20190908",
 	"dependencies": {
 		"@wayward/goodstream": "0.4.0"
 	}
