--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
 	"name": "@wayward/types",
 	"description": "TypeScript declarations for Wayward, used for modding.",
-	"version": "2.8.0-beta.dev.20190908",
+	"version": "2.8.0",
 	"dependencies": {
 		"@wayward/goodstream": "0.4.0"
+	},
+	"license": "MIT",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/WaywardGame/types.git"
 	}
 }
