--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
 		"@wayward/goodstream": "0.7.1"
 	},
 	"devDependencies": {
-		"@wayward/game": "^1.0.0"
+		"@wayward/game": "^1.0.0",
+		"@types/node": "^17.0.5",
+		"@types/fs-extra": "^9.0.13"
 	}
 }
