--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
 		"watch": "tsc --build"
 	},
 	"dependencies": {
+		"@types/fs-extra": "^9.0.13",
+		"@types/node": "^17.0.5",
 		"@wayward/goodstream": "0.7.1"
 	},
 	"devDependencies": {
