--- a/package.json
+++ b/package.json
@@ -1,24 +1,26 @@
 {
-	"name": "@wayward/types",
-	"description": "TypeScript declarations for Wayward, used for modding.",
-	"version": "2.8.0",
-	"license": "MIT",
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/WaywardGame/types.git"
-	},
-	"scripts": {
-		"clean": "rimraf ./definitions ./*.tsbuildinfo",
-		"build": "tsc --build",
-		"build:mods": "tsc --build",
-		"watch": "tsc --build"
-	},
-	"dependencies": {
-		"@types/fs-extra": "^9.0.13",
-		"@types/node": "^17.0.5",
-		"@wayward/goodstream": "0.7.1"
-	},
-	"devDependencies": {
-		"@wayward/game": "^1.0.0"
-	}
+  "name": "@wayward/types",
+  "description": "TypeScript declarations for Wayward, used for modding.",
+  "version": "2.8.0",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/WaywardGame/types.git"
+  },
+  "scripts": {
+    "clean": "rimraf ./definitions ./*.tsbuildinfo",
+    "build": "tsc --build",
+    "build:mods": "tsc --build",
+    "watch": "tsc --build"
+  },
+  "dependencies": {
+    "@types/express": "^4.17.21",
+    "@types/fs-extra": "^9.0.13",
+    "@types/node": "^17.0.5",
+    "@types/ws": "^8.5.10",
+    "@wayward/goodstream": "^0.7.2",
+    "ansicolor": "^2.0.3",
+    "electron": "^30.0.1",
+    "jsonc-parser": "^3.2.1"
+  }
 }
