--- a/package.json
+++ b/package.json
@@ -8,15 +8,12 @@
 		"url": "https://github.com/WaywardGame/types.git"
 	},
 	"scripts": {
-		"clean": "rimraf ./definitions ./*.tsbuildinfo",
-		"build": "tsc --build",
-		"build:mods": "tsc --build",
-		"watch": "tsc --build"
+		"clean": "rimraf ./definitions ./*.tsbuildinfo"
 	},
 	"dependencies": {
 		"@types/fs-extra": "^9.0.13",
-		"@types/node": "^17.0.5",
-		"@wayward/goodstream": "0.9.0"
+		"@types/node": "22.4.1",
+		"@wayward/goodstream": "0.10.0"
 	},
 	"devDependencies": {
 		"@wayward/game": "^1.0.0"
